--- a/bootstrap/travel.html
+++ b/bootstrap/travel.html
@@ -204,6 +204,11 @@
                     </div>
 
                     <div class="mb-3">
+                        <label for="destination" class="form-label fw-semibold">Destination</label>
+                        <input type="text" id="destination" class="form-control" placeholder="Destination of interest">
+                    </div>
+
+                    <div class="mb-3">
                         <label for="message" class="form-label fw-semibold">Message</label>
                         <textarea id="message" class="form-control" rows="5" placeholder="Write your message"></textarea>
                     </div>
